<resources>
    <string name="app_name">Guess the number</string>
    <string name="start_game">Start game!</string>
    <string name="high_score">High score</string>
    <string name="option">Option</string>
    <string name="about_this">About this</string>
    <string name="exit">Exit</string>
    <string name="score">Score: </string>
    <string name="time">Time: </string>
    <string name="guide">Let\'s guess</string>
    <string name="confirm">Confirm</string>
    <string name="too_high">Too high!</string>
    <string name="correct">Correct!</string>
    <string name="too_low">Too low!</string>
    <string name="enter_number">Please enter a number!</string>
    <string name="your_score">Your score</string>
    <string name="to_main_menu">Go to Main menu</string>
    <string name="play_again">Play Again</string>
</resources>
