<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.realroy.guessthenumbergame.MenuActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/appName_textView"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="@dimen/abc_action_button_min_height_material"
        android:textAlignment="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/startGame_btn"
        android:text="@string/start_game"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/high_score"
        android:id="@+id/highScore_btn" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option"
        android:id="@+id/option_btn"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_this"
        android:id="@+id/aboutThis_btn"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/exit_btn"
        />

</LinearLayout>
