<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.realroy.guessthenumbergame.GameActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:id="@+id/score_textView"
            android:layout_weight="0.23"
            android:textAlignment="textEnd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/showScore_textView"
            android:layout_weight="0.10"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:id="@+id/time_textView"
            android:textAlignment="textEnd"
            android:layout_weight="0.40" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/showTime_textView"
            android:textAlignment="center"
            android:layout_weight="0.10" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide"
        android:id="@+id/showHint_textView"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/abc_action_bar_stacked_max_height"
        android:textColor="@android:color/holo_orange_dark" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:textAlignment="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/confirm_btn"
        android:background="@android:color/holo_green_light"
        android:textColor="#ffffff" />

</LinearLayout>
